[tool.poetry]
name = "adopt-ruff"
version = "0.0.1"
authors = ["ScDor"]
description = "Adopt Ruff faster"
# readme = "README.md" # TODO

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
tabulate = "^0.9.0"
mdutils = "^1.6.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.11"

[tool.poetry.scripts]
adopt-ruff = "adopt_ruff.main:main"

[tool.ruff]
target-version = "py311"
select = ["ALL"]
ignore = [
    "ANN",
    "D",
    "DTZ",
    "COM812",
    "EM102",
    "TRY003",
    "S113",
    "G003",
    "G004",
    "INP001",
    "S501",
    "PD901",
    "E501",
    "TD002",
    "TD003",
    "TD004",
    "FIX002",
    "EM101",
    "FBT001",
    "FBT002",
    "S603",
    "S607",
    "PLR0913",
]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
