[project]
name = "adopt-ruff"
version = "0.1.0"
description = "Adopt Ruff faster"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "mdutils>=1.6.0",
    "more-itertools>=10.5.0",
    "packaging>=24.2",
    "pydantic>=2.10.4",
    "tabulate>=0.9.0",
    "typer>=0.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty",
    "prek",
    "ruff>=0.8.4",
]
typing = [
    "types-tabulate>=0.9.0.20241207",
]
[project.scripts]
adopt-ruff = "adopt_ruff.main:main"


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ISC001",
    "ANN",
    "D",
    "DTZ",
    "COM812",
    "EM102",
    "TRY003",
    "S113",
    "G003",
    "G004",
    "INP001",
    "S501",
    "E501",
    "TD002",
    "TD003",
    "TD004",
    "FIX002",
    "EM101",
    "FBT001",
    "FBT002",
    "S603",
    "S607",
    "PLR0913",
]
